# cmake-cmsis-stm32

./: CMakeLists.txt  LICENSE  README.md
cmake/: cmsis-stm32.cmake
cmake/toolchains/: gcc-arm-none-eabi.cmake
docs/: 00_index.md  10_firmware-development.md  80_firmware-development.md
example/: CMakeLists.txt
